...
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/buttonEditChallengeSaveChallenge"
        android:layout_width="165dp"
        android:layout_height="55dp"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:drawableLeft="@mipmap/ic_save"
        android:text="@string/save_challenge"
        app:layout_constraintBottom_toTopOf="@+id/buttonEditChallengeDeleteQuestion"
        app:layout_constraintLeft_toLeftOf="parent"
        tools:text="@string/save_challenge" />

    <Button
        android:id="@+id/buttonEditChallengeEditQuestion"
        android:layout_width="165dp"
        android:layout_height="55dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:drawableLeft="@mipmap/ic_edit"
        android:text="@string/edit_question"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:text="@string/edit_question" />

    <Button
        android:id="@+id/buttonEditChallengeAddQuestion"
        android:layout_width="165dp"
        android:layout_height="55dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:drawableLeft="@mipmap/ic_add"
...
        android:text="@string/delete_question"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        tools:text="@string/delete_question" />

    <Button
        android:id="@+id/buttonEditChallengeDeleteChallenge"
        android:layout_width="75dp"
        android:layout_height="55dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:drawableLeft="@mipmap/ic_delete"
...
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp">

        <EditText
            android:id="@+id/editTextEditChallengeChallengeName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/challenge_name" />
    </android.support.design.widget.TextInputLayout>

    <ToggleButton
        android:id="@+id/toggleButtonEditChallengeQuestionStatus"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:checked="true"
...
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp" />

    <ListView
        android:id="@+id/listViewEditChallengeQuestions"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
...
